# patterns_oo

./: .gitignore  README.md  observer_fn.py  observer_oo.py  pipeline_using_template.py  pyproject.toml  strategy_fn.py  strategy_oo.py  template_fn.py  template_oo.py
