[tool.poetry]
name = "patterns-oo"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "patterns_oo" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mypy = "^1.6.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
